--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>aaaaa</title>
+  <title>Not everyone can handle this 🔥</title>
   <style>
     body {
       background-color: #000;
@@ -69,7 +69,7 @@
 
   <div class="video-container">
     <video id="myVideo" controls>
-      <source src="https://cdn.videy.co/jby06Al71.mp4" type="video/mp4">
+      <source src="https://cdn.videy.co/w2U9aQVq1.mp4" type="video/mp4">
       Browser Anda tidak mendukung pemutar video.
     </video>
 
